@@ -10,6 +10,8 @@
 #include "SATInstance.h"
 #include "SATSolver.h"
 
+#include "dmcs/Log.h"
+
 /////////////
 // Defines
 
@@ -101,17 +103,19 @@ SATInstance::readTheory(const dmcs::TheoryPtr& theory, std::size_t sig_size)
 {
   // Transfer local theory to internal clause representation of relsat
   iVariableCount = sig_size;
-  std::cerr << "SATInstance::readTheory. iVariableCount = " << iVariableCount << std::endl;
+
+  DMCS_LOG_TRACE("iVariableCount = " << iVariableCount);
 
   VariableSet xPositiveVariables(iVariableCount);
   VariableSet xNegativeVariables(iVariableCount);
 
-  std::cerr << "Reading theory:" << std::endl;
+  DMCS_LOG_DEBUG("Reading theory:");
 
   // travel through the theory
-  for (dmcs::Theory::const_iterator it = theory->begin(); it != theory->end(); ++it)
+  for (dmcs::Theory::const_iterator it = theory->begin();
+       it != theory->end(); ++it)
     {
-      std::cerr << "Clause: ";
+      DMCS_LOG_DEBUG("Clause:");
 
       xPositiveVariables.vClear();
       xNegativeVariables.vClear();
@@ -125,7 +129,7 @@ SATInstance::readTheory(const dmcs::TheoryPtr& theory, std::size_t sig_size)
 	  eVar = *jt;
 	  assert (eVar <= iVariableCount);
 
-	  std::cerr << eVar << " ";
+	  DMCS_LOG_DEBUG(eVar);
 
 	  if (eVar < 0)
 	    {
@@ -150,7 +154,6 @@ SATInstance::readTheory(const dmcs::TheoryPtr& theory, std::size_t sig_size)
 		}
 	    }
 	} // for (dmcs::Clause::const_iterator jt = ...
-      std::cerr << std::endl;
 
       if (!bIgnoreMe)
 	{
